SNR y CNR (Formulas para atenuación)

--- a/Image_Analysis/Single_Image.ipynb
+++ b/Image_Analysis/Single_Image.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ffd44bf5",
    "metadata": {},
    "outputs": [],
@@ -342,8 +342,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5f342308-771d-4860-8eca-90e0addd48e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'image_norm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 11\u001b[0m\n\u001b[0;32m      7\u001b[0m y_max1, y_max2, y_max3, y_max4 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m100\u001b[39m\n\u001b[0;32m      8\u001b[0m x_max1, x_max2, x_max3, x_max4 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m100\u001b[39m\n\u001b[1;32m---> 11\u001b[0m roi_sphere1 \u001b[38;5;241m=\u001b[39m image_norm[y_min1:y_max1, x_min1:x_max1]\n\u001b[0;32m     12\u001b[0m roi_sphere2 \u001b[38;5;241m=\u001b[39m image_norm[y_min2:y_max2, x_min2:x_max2]\n\u001b[0;32m     13\u001b[0m roi_sphere3 \u001b[38;5;241m=\u001b[39m image_norm[y_min3:y_max3, x_min3:x_max3]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'image_norm' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Cálculo del SNR y CNR de la Región de Interés (ROI, por sus siglas en inglés)\n",
+    "# El código no está del todo funcional porque no tenemos imágnes claras del nuevo fantoma (se me eliminaron XD)\n",
+    "\n",
+    "y_min1, y_min2, y_min3, y_min4 = 0,0,0,0\n",
+    "x_min1, x_min2, x_min3, x_min4 = 0,0,0,0\n",
+    "\n",
+    "y_max1, y_max2, y_max3, y_max4 = 100, 100, 100, 100\n",
+    "x_max1, x_max2, x_max3, x_max4 = 100, 100, 100, 100\n",
+    "\n",
+    "\n",
+    "roi_sphere1 = image_norm[y_min1:y_max1, x_min1:x_max1]\n",
+    "roi_sphere2 = image_norm[y_min2:y_max2, x_min2:x_max2]\n",
+    "roi_sphere3 = image_norm[y_min3:y_max3, x_min3:x_max3]\n",
+    "roi_sphere4 = image_norm[y_min3:y_max3, x_min3:x_max3]\n",
+    "\n",
+    "y_minBG, y_maxBG = 0, 100\n",
+    "x_minBG, x_maxBG = 0, 100\n",
+    "\n",
+    "roi_bg = image_norm[y_minBG:y_maxBG, x_minBG:x_maxBG]\n",
+    "\n",
+    "\n",
+    "mean_sphere1 = np.mean(roi_sphere1)\n",
+    "mean_sphere2 = np.mean(roi_sphere2)\n",
+    "mean_sphere3 = np.mean(roi_sphere3)\n",
+    "mean_sphere4 = np.mean(roi_sphere4)\n",
+    "\n",
+    "std_sphere1 = np.std(roi_sphere1)\n",
+    "std_sphere2 = np.std(roi_sphere2)\n",
+    "std_sphere3 = np.std(roi_sphere3)\n",
+    "std_sphere4 = np.std(roi_sphere4)\n",
+    "\n",
+    "mean_bg = np.mean(roi_bg)\n",
+    "std_bg = np.std(roi_bg)\n",
+    "\n",
+    "snr_sphere1 = (mean_sphere1 - mean_bg) / std_bg\n",
+    "snr_sphere2 = (mean_sphere2 - mean_bg) / std_bg\n",
+    "snr_sphere3 = (mean_sphere3 - mean_bg) / std_bg\n",
+    "snr_sphere4 = (mean_sphere4 - mean_bg) / std_bg\n",
+    "\n",
+    "cnr_sphere1 = abs(mean_sphere1 - mean_bg) / np.sqrt(std_sphere1**2 + std_bg**2)\n",
+    "cnr_sphere2 = abs(mean_sphere2 - mean_bg) / np.sqrt(std_sphere2**2 + std_bg**2)\n",
+    "cnr_sphere3 = abs(mean_sphere3 - mean_bg) / np.sqrt(std_sphere3**2 + std_bg**2)\n",
+    "cnr_sphere4 = abs(mean_sphere4 - mean_bg) / np.sqrt(std_sphere4**2 + std_bg**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0df87d40",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -351,9 +415,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -365,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
