--- a/Image_Analysis/Image_Analysis.ipynb
+++ b/Image_Analysis/Image_Analysis.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "id": "b6c0ec20",
    "metadata": {},
    "outputs": [],
@@ -116,14 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "id": "c49f2975",
    "metadata": {},
    "outputs": [],
    "source": [
     "pixel = 256\n",
     "n_typeCOL = 1\n",
-    "n_dithstep = 4\n",
+    "n_dithstep = 5\n",
     "n_beamrun = 1\n",
     "raw = \"raw_\"\n",
     "txt = \"txt\""
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "id": "ea0006a5",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "id": "90dd9414",
    "metadata": {},
    "outputs": [
@@ -170,6 +170,11 @@
       "2. There is no Flat Field in this set.\n",
       "2. There is no Flat Field in this set.\n",
       "----- Set #4 has been completely analyzed ------ \n",
+      "\n",
+      "----- Set #5 is being analyzed ------\n",
+      "2. There is no Flat Field in this set.\n",
+      "2. There is no Flat Field in this set.\n",
+      "----- Set #5 has been completely analyzed ------ \n",
       "\n"
      ]
     }
@@ -191,17 +196,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "id": "a5cec68b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7c0f61815810>"
+       "<matplotlib.colorbar.Colorbar at 0x7c0f61e8e5d0>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -234,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "id": "8bf3aa20",
    "metadata": {},
    "outputs": [
@@ -260,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "id": "a503379d",
    "metadata": {},
    "outputs": [
@@ -270,7 +275,7 @@
        "PosixPath('image_set/Phantom/50um')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "id": "81fa01e2",
    "metadata": {},
    "outputs": [
