--- a/Image_Analysis/Image_Analysis.ipynb
+++ b/Image_Analysis/Image_Analysis.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "This first section contains the scripts used to read the `.raw` files. The structure followed by the code to read each image is as follows. A folder with any name is analyzed—for example, let’s assume we are studying the phantom case with a 10$\\mu$m focal spot, named `Phantom_10um`.\n",
     "\n",
-    "As discussed in the manual, if we want the final image to have good visualization, dithering must be applied. Therefore, within \\texttt{Phantom_10um}, there should be $N$ folders named with a single number from 1 to $N$, where $N$ is the number of dithering steps. Inside each of these folders, the `.raw` files must be located, and named following the format \"Piece_X.raw\", where $X$ corresponds to the number of `/Pepi/cont/beamOn` commands set at the start of the simulation.\n",
+    "As discussed in the manual, if we want the final image to have good visualization, dithering must be applied. Therefore, within `Phantom_10um`, there should be $N$ folders named with a single number from 1 to $N$, where $N$ is the number of dithering steps. Inside each of these folders, the `.raw` files must be located, and named following the format \"Piece_X.raw\", where $X$ corresponds to the number of `/Pepi/cont/beamOn` commands set at the start of the simulation.\n",
     "For example, if two `/Pepi/cont/beamOn` commands were issued, then the resulting files should be named \"Piece_1.raw\" and \"Piece_2.raw\". The order does not matter. Lastly, the entire folder should be placed inside the \"raw_files\" directory.\n",
     "\n",
     "If you collected Flat Field data, you must create another folder called `FF`, where you will follow the exact same structure as the mentioned above for any `/Pepi/cont/beamOn` made.\n",
